--- a/src/app/project-details/project-details.component.css
+++ b/src/app/project-details/project-details.component.css
@@ -1,5 +1,12 @@
 @import '../../styles.css';
 
+.projects-view{
+    display: flex;
+    /* display: inline-flex; */
+    flex-direction: column;
+   
+}
+
 .project-details{
     display: flex;
     flex-direction: column;
