--- a/src/styles.css
+++ b/src/styles.css
@@ -52,6 +52,88 @@ html, body{
     border: 1px solid black;
 }
 
+.app-panel{
+    height: 100vh;
+    margin-left: 3px;
+    margin-right: 3px;
+    padding: 3px;
+}
 
+.list{
+    overflow: auto;
+}
 
+.filter{
+    height: 2em;
+    margin-bottom: 4px;
+}
 
+.border{
+    border: 1px solid black;
+    /* border: 1px solid transparent; */
+    box-shadow: 0px 3px 1px -2px rgba(0, 0, 0, 0.2), 0px 2px 2px 0px rgba(0, 0, 0, 0.14), 0px 1px 5px 0px rgba(0, 0, 0, 0.12);
+    border-radius: 8px;
+}
+
+.list-item{
+    display: flex;
+    border: 1px solid trainsparent;
+    padding: 10px;
+    margin: 0;
+}
+
+.list-item-options{
+    visibility: hidden;
+    padding: 5px;
+}
+
+.list-item-options:hover{
+    
+    box-shadow: 0px 3px 1px -2px rgba(0, 0, 0, 0.2), 0px 2px 2px 0px rgba(0, 0, 0, 0.14), 0px 1px 5px 0px rgba(0, 0, 0, 0.12);
+    border-radius: 8px;
+}
+
+.list-item:hover{
+    background-color: aliceblue;
+    z-index: 100;
+}
+
+.list-item:hover .list-item-options{
+    visibility: visible;
+}
+
+.list-item-value{
+    margin-top: auto;
+    margin-bottom: auto;
+    width: 100%;
+}
+
+.selected-list-item{
+    background-color: seashell;
+}
+
+.transparent-border{
+    border: 1px solid transparent;
+    box-shadow: 0px 3px 1px -2px rgba(0, 0, 0, 0.2), 0px 2px 2px 0px rgba(0, 0, 0, 0.14), 0px 1px 5px 0px rgba(0, 0, 0, 0.12);
+    border-radius: 8px;
+}
+
+.shadow{
+    box-shadow: 0px 3px 1px -2px rgba(0, 0, 0, 0.2), 0px 2px 2px 0px rgba(0, 0, 0, 0.14), 0px 1px 5px 0px rgba(0, 0, 0, 0.12);
+}
+
+.button{
+    margin-top: 5px;
+    margin-bottom: 5px;
+    height: 3em;
+    border-radius: 8px;
+}
+
+.button:hover{
+    cursor: pointer;
+    background-color: aliceblue;
+}
+.panel-header{
+    margin-left: auto;
+    margin-right: auto;;
+}
