--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -1,4 +1,4 @@
-<div class="projects-view shadow app-panel">
+<div class="app-panel shadow">
     <h3 class="panel-header">Projekty</h3>
     <!-- TODO: ustawić odpowiednio styl do filtra -->
     <input class="project-filter filter border" (input)='filterProjects($event.target.value)'>
