--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -29,7 +29,7 @@
       <!-- <span >Edytuj</span> -->
       Edytuj
     </button>
-    <button mat-menu-item (click)="removeProject()">
+    <button mat-menu-item (click)="onRemoveProject()">
       <!-- <mat-icon>notifications_off</mat-icon> -->
       <!-- <span>Disable alerts</span> -->
       Usuń
