--- a/src/app/tasks/tasks.component.html
+++ b/src/app/tasks/tasks.component.html
@@ -32,7 +32,7 @@
     <button mat-menu-item (click)="editTask()">
       Edytuj
     </button>
-    <button mat-menu-item (click)="removeTask()">
+    <button mat-menu-item (click)="onRemoveTask()">
       Usuń
     </button>
   </mat-menu>
